--- a/src/assets/styles/main.scss
+++ b/src/assets/styles/main.scss
@@ -1,25 +1,35 @@
-/**
- * Import variables
- */
+/*
+* SMACSS + SCSS starter v2.1
+* Inspired by SMACSS http://smacss.com
+* Author: @jonathanpath
+* Date: 4 August 2015
+*
+* https://github.com/jonathanpath/SASS-SMACSS
+* See file structure in http://jonathanpath.com/sass+smacss/scss/style.scss
+*
+* Coding rules : https://github.com/necolas/idiomatic-css
+*
+*/
 
-@import "variables";
+@tailwind base;
+@tailwind components;
 
-/**
- * Import npm dependencies
- * see: https://en.parceljs.org/module_resolution.html
- * see commented examples below
- */
+@tailwind utilities;
 
-// @import "some-node-module";
-// @import "@some-company/some-node-module";
+// /* Vendor */
+// @import "@fortawesome/fontawesome-free/css/all.css";
 
-/**
- * Import layouts
- * It's a best practice to use a partial for each page
- */
+// /* Base */
+// @import "base";
 
-@import "layouts/home";
+// /* Layouts */
+// @import "layouts/navbar";
+// @import "layouts/poster";
+// @import "layouts/members";
+// @import "layouts/photo";
 
-/**
- * Do NOT include anything else in this file!
- */
+// /* Site settings */
+// @import "site-settings";
+
+// /* Import npm dependecies */
+// @import "~bootstrap/scss/bootstrap.scss";
