--- a/src/assets/styles/main.scss
+++ b/src/assets/styles/main.scss
@@ -16,8 +16,8 @@
 
 @tailwind utilities;
 
-// /* Vendor */
-// @import "@fortawesome/fontawesome-free/css/all.css";
+/* Vendor */
+@import "@fortawesome/fontawesome-free/css/all.css";
 
 // /* Base */
 // @import "base";
